--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ dist
 build
 
 # environment variables
-.env
+# .env
 .env.local
 .env.development.local
 .env.test.local
@@ -28,7 +28,7 @@ build
 .netlify
 .unimportedrc.json
 tsconfig.tsbuildinfo
-.vscode
+# .vscode
 
 npm-debug.log*
 yarn-debug.log*
